<resources>
    <string name="app_name">SaarthiApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strSearchVolunteer">Search for Volunteers</string>
    <string name="title_activity_maps">Map</string>
    <string name="strUpdate">Update</string>
    <string name="strEmail">Email</string>
    <string name="strDontSignInText">Don’t have an account? Sign Up</string>
    <string name="strAcceptingTermServices">By Signing in, you agreed with our \nTerms of Services.</string>
    <string name="strAlreadyAccountSignIn">Already have an account? Sign In</string>
    <string name="strSignUpTermsText">By Signing Up, you agreed with our \nTerms of Services.</string>
    <string name="strLogout">Logout</string>
    <string name="strRateApp">Rate App</string>
    <string name="strFeedback">Rate &amp; Feedback</string>
    <string name="strReportProblem">Report a Problem</string>
    <string name="strDonate">Donate</string>
    <string name="strNotification">Notifications</string>
    <string name="strMyEvents">My Events</string>
    <string name="strCommunity">My Communities</string>
    <string name="strRequest">Requests</string>
    <string name="strHome">Home</string>

    <string name="navigation_drawer_open">Open Home</string>
    <string name="navigation_drawer_close">Close Home</string>
    <string name="strPrivacyPolicy"><![CDATA[This privacy policy details how Saarthi Foundation respects privacy when collecting the user’s personal information. This Privacy Policy explains what personal information we, Saarthi Foundation, use.\n\n

The application ‘Saarthi’ is owned and operated by Ads and Url, a private limited company in Delhi, India. Henceforth, this service is provided by Ads and Url at no cost and is intended for use as is.\n\n

The app is used to inform visitors regarding our policies with the collection, use, and disclosure of personal information if anyone decides to use our service. We are committed to letting you know how we use your personal information and use it responsibly. The information is solely used to provide and improve the service.\n\n

The personal information we gather includes your name, address, email, and phone number, adhaar details, fingerprints. Please note that this individual information is not lost, misused, leased, or sold to organizations or associations that are not a part of the Saarthi Foundation.\n\n

We guarantee you that your individual data is held safely, according to the Data Protection Act.\n\n

These services are not addressed to anyone below the age of 13. In case we discover that a child below 13 has provided us with his/her personal information, we immediately delete the data from our servers. If you are a parent/guardian and aware that your child has provided us with personal information, you are hereby requested to inform us so that we are able to take necessary action.\n\n

Users will be notified if the foundation decides to use users’ Personal Information in a manner different from that stated at the time of collection. It is up to the users to choose whether or not the Foundation may use such information in this manner. \n\n

If you have any concerns or queries, feel free to contact us at <contact details>\n

]]></string>
    <string name="strEnterOtpSend">Enter the OTP send to</string>
    <string name="strSignInInstead">Sign In instead.</string>
    <string name="strNext">Next</string>
    <string name="strFinish">Finish</string>


    <!--Intro slider string value here.....-->
    <string name="strHelpTogether">Let’s Help Together</string>
    <string name="strHelpTogetherDesc">Promoting the welfare of the deprived section of the society</string>

    <string name="strEasyToHelp">Its Easy To Help</string>
    <string name="strEasyToHelpDesc">Providing underprivileged children with quality education and proper nutrition</string>

    <string name="strBeSaarthi">Be A Saarthi</string>
    <string name="strBeSaarthiDesc">Developing society, improving communities, and taking care of the well-being of the citizens</string>

    <string name="strBeChangemaker">Be A Changemaker</string>
    <string name="strBeChangemakerDesc">Helping people discover their potential to become a changemaker</string>
    <string name="strSkip">Skip</string>
    <string name="strSignIn">sign in</string>
    <string name="strEnterLoginDetailToContinue">Enter your details to continue.</string>
    <string name="strPwd">Password</string>
    <string name="strForgotPwd">Forgot Your Password?</string>
    <string name="strSignUp">Sign Up</string>
    <string name="strMobNumber">Mobile Number</string>
    <string name="strFogotPwdText">You will recieve an OTP on the mobile number you will enter to reset password.</string>
    <string name="strForgotTextRequired">Enter your registered mobile number.</string>
    <string name="strForgotPass">forgot password</string>
    <string name="strDidntReceiveOtp">Didn\'t receive OTP :</string>
    <string name="strResendOTP">Resend OTP</string>
    <string name="strShare">Share</string>
    <string name="strJoin">Join</string>
    <string name="strCoronaCommunityText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sit feugiat turpis elit. Cras duis euismod at vitae risus penatibus amet a, ut...</string>
    <string name="strDonateToCare">Donate To Care</string>
    <string name="strYesAccept">Yes</string>
    <string name="strSubmitDonate">Submit</string>
    <string name="strDonatationRequestText">Your request for donation has been submited successfully</string>
    <string name="strDonateExecutiveCall">One of our executive will contact you within 48 Hours, for further information.</string>
    <string name="strSaarthiLogoutText">Are you sure to exit from Saarthi App?</string>
    <string name="strPushNotifyDescText">Change your prefrences of notifications for event, community or feeds update.</string>
    <string name="strSendPushNotify">Send push notifications</string>
    <string name="strChatHintMsg">Type your message</string>

    <string name="strWomanSafetAbout">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sit feugiat turpis elit. Cras duis euismod at vitae risus penatibus amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sit feugiat turpis elit. Cras duis euismod at vitae risus penatibus amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit.

        \n\nIn consectetur sit feugiat turpis elit. Cras duis euismod at vitae risus penatibus amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sit feugiat turpis elit. Cras duis euismod at vitae risus penatibus amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sit feugiat turpis elit. Cras duis euismod at vitae risus penatibus amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur sit feugiat turpis elit.</string>
    <string name="create_new_event">Create New Event</string>
    <string name="joinedText"> Joined</string>
</resources>
