<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/buttonColor">

        <ImageView
            android:id="@+id/imgCloseMenu"
            android:src="@drawable/ic_menu_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDrawerProfileLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCloseMenu">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:src="@drawable/user_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/imgProfile"
                app:layout_constraintLeft_toRightOf="@+id/imgProfile"
                app:layout_constraintBottom_toBottomOf="@+id/imgProfile">

                <TextView
                    android:id="@+id/tvUserName"
                    android:text="Pankaj Mangal"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/tvUserLocation"
                    android:text="Bangalore"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_location_on"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/colorWhite"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:drawableLeft="@drawable/ic_location_on" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clDrawerProfileLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvDrawerHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strHome"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="12dp"
                android:background="?attr/selectableItemBackground"
                android:layout_marginStart="6dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvDrawerCommunity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strCommunity"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_marginStart="6dp"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/tvDrawerHome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvDrawerEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strMyEvents"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_marginStart="6dp"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/tvDrawerCommunity"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvDrawerNotification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strNotification"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="12dp"
                android:background="?attr/selectableItemBackground"
                android:layout_marginStart="6dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/tvDrawerEvent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvDrawerDonate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strDonate"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="12dp"
                android:background="?attr/selectableItemBackground"
                android:layout_marginStart="6dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/tvDrawerNotification"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvDrawerFeedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strFeedback"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                android:padding="12dp"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/tvDrawerDonate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvDrawerLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strLogout"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="12dp"
                android:background="?attr/selectableItemBackground"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>