<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.community.frag.CommunityCreated">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl4Community"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl96Community"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCoronaPoster"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/gl4Community"
            app:layout_constraintRight_toLeftOf="@+id/gl96Community">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/community_created"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:text="Fight Against Corona"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/community_created"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvAwarenessAboutCorona"/>

            <TextView
                android:id="@+id/tvAwarenessAboutCorona"
                android:text="Awareness about coronavirus and Help needy"
                android:textColor="#00B2FF"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/community_created"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvCoronaCommunityText"
            android:text="@string/strCoronaCommunityText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_margin="6dp"
            app:layout_constraintLeft_toRightOf="@+id/gl4Community"
            app:layout_constraintRight_toLeftOf="@+id/gl96Community"
            app:layout_constraintTop_toBottomOf="@+id/clCoronaPoster"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clJoinCoronaCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintLeft_toRightOf="@+id/gl4Community"
            app:layout_constraintRight_toLeftOf="@+id/gl96Community"
            app:layout_constraintTop_toBottomOf="@+id/tvCoronaCommunityText">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl40Next1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"/>

            <TextView
                android:text="@string/strJoin"
                android:textSize="18sp"
                android:padding="12dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/gl40Next1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clShareCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/share_btn_bg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintLeft_toRightOf="@+id/gl4Community"
            app:layout_constraintRight_toLeftOf="@+id/gl96Community"
            app:layout_constraintTop_toBottomOf="@+id/clJoinCoronaCommunity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl40Next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"/>

            <TextView
                android:id="@+id/tvNextIntroSlider"
                android:text="@string/strShare"
                android:textSize="18sp"
                android:padding="12dp"
                android:textColor="@color/buttonColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/gl40Next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>